<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Cafetería UTP</string>
    <string name="logo">Logo UTP</string>
    <string name="animacion">Animación UTP</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registro">Registrarse</string>
    <string name="correo">Ingresar Correo Institucional</string>
    <string name="nombre">Ingresar Nombre</string>
    <string name="rol">Rol del registrado</string>
    <string name="contra">Ingresar Contraseña</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="crear">Crear Contraseña</string>
    <string name="telefono">Ingresar Teléfono</string>
    <string name="codigo">Enviar Código</string>
    <string name="inCodigo">Ingresar Código</string>
    <string name="verificar">Verificar</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="m_verificacion">Por favor, ingresa los dígitos de tu código de \n verificación enviados a tu correo institucional </string>
    <string name="recuperar">¿Olvidaste \nTu Contraseña?</string>
    <string name="m_restablecer">¡Por favor escribe algo que recuerdes!</string>
    <string name="codEstudiante">Ingresar código de estudian</string>



    <string name="m_recuperar">¡No te preocupes! Por favor, ingresa tu correo \n institucional  asociado a tu cuenta.</string>
    <string name="p_registro">¿No tienes una cuenta aún? <font color="#395E99"> ¡Regístrate aquí!</font></string>
    <string name="p_iniciar">¿Ya tienes una cuenta? <font color="#395E99"> ¡Inicia sesión aquí!</font></string>
    <string name="p_contra">¿Olvidaste tu contraseña? <font color="#395E99"> Recupérala aquí.</font></string>
    <string name="btn_a">Atras</string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_order">Órdenes</string>
    <string name="title_profile">Perfil</string>
    <string name="banner">Banner SplashScreen</string>
    <string name="eslogan">Tómate un respiro y recarga energías \n para lo que sigue en tu día</string>
</resources>