<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cafeteria.app_utp_cafeteria.presentation.view.inicio.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cafeteria.app_utp_cafeteria.presentation.view.buscar.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.cafeteria.app_utp_cafeteria.presentation.view.ordenes.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cafeteria.app_utp_cafeteria.presentation.view.perfil.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>



</navigation>