<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".presentation.view.auth.LoginFragment">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/negro"
        android:fontFamily="@font/noto_sans_balinese_medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <ImageView
        android:id="@+id/btn_atras"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/btn_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_regresar" />


    <TextView
        android:id="@+id/titleIniciar"
        android:layout_width="208dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rowdies_bold"
        android:text="@string/iniciar"
        android:textColor="@color/negro"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="76dp"
        android:layout_height="62dp"
        android:contentDescription="@string/animacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:layout_constraintWidth_percent="0.2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/opcion6" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleIniciar"
        app:layout_constraintVertical_bias="0.316"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/correoInsti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/correo"
            android:textColor="@color/negro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <EditText
            android:id="@+id/inCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/campo_texto"
            android:drawableEnd="@drawable/icon_email"
            android:hint="ejemplo@utp.edu.pe"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correoInsti" />

        <!-- Campo de contraseña -->
        <TextView
            android:id="@+id/contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contra"
            android:textColor="@color/negro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inCorreo" />

        <EditText
            android:id="@+id/inContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/campo_texto"
            android:drawableEnd="@drawable/icon_oculto"
            android:hint="********"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contrasena" />


        <TextView
            android:id="@+id/pg_contra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/p_contra"
            android:textColor="@color/texto_link"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnIniciarSesion"
            style="@style/BotonPrincipal_w"
            android:layout_marginBottom="40dp"
            android:text="@string/iniciar"
            tools:layout_editor_absoluteX="-18dp"
            tools:layout_editor_absoluteY="533dp" />

        <TextView
            android:id="@+id/pg_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/p_iniciar"
            android:textColor="@color/texto_link"
            android:textSize="16sp"
            android:textStyle="bold"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



