<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".presentation.view.auth.RecuperarFragment">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/negro"
        android:fontFamily="@font/noto_sans_balinese_medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <ImageView
        android:id="@+id/btn_atras"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/btn_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_regresar" />


    <TextView
        android:id="@+id/titleIniciar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rowdies_bold"
        android:text="@string/recuperar"
        android:textColor="@color/negro"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <ImageView
        android:id="@+id/iconRecuperar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/icon_recuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconRecuperar"
        app:layout_constraintVertical_bias="0.331"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/msjRecuperar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="3sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/m_recuperar"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.706" />


        <TextView
            android:id="@+id/correoInsti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/correo"
            android:textColor="@color/negro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <EditText
            android:id="@+id/inCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/campo_texto"
            android:drawableEnd="@drawable/icon_email"
            android:hint="ejemplo@utp.edu.pe"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/correoInsti" />


        <Button
            android:id="@+id/btnIniciarSesion"
            style="@style/BotonPrincipal_w"
            android:layout_marginBottom="40dp"
            android:text="@string/codigo"
            tools:layout_editor_absoluteX="-18dp"
            tools:layout_editor_absoluteY="533dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



