<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_splash"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.view.auth.SplashActivity"
    tools:ignore="MissingConstraints">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/animacion"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        app:layout_constraintWidth_percent="0.9"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/opcion24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="3sp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/logo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/utp_logo"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="3sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/eslogan"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="19sp"
            app:layout_constraintVertical_bias="0.706" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="182dp"
        android:contentDescription="@string/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/topbanner1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="162dp"
        android:layout_height="158dp"
        android:contentDescription="@string/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottombanner1" />


</androidx.constraintlayout.widget.ConstraintLayout>